--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,10 @@ export(batch_apply)
 export(construct_submission_name)
 export(detatch_all_packages)
 export(get_maxxxy_packages)
+export(multiplot)
 import(dplyr)
+import(grid)
 import(multidplyr)
+import(tidyverse)
 importFrom(utils,sessionInfo)
+importFrom(utils,timestamp)
