--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,9 @@ Description: Usefull packages for my workflows.
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 Suggests: testthat
 Imports:
     dplyr,
-    multidplyr
+    multidplyr,
+    tidyverse
